--- a/templates/result.html
+++ b/templates/result.html
@@ -33,7 +33,7 @@
                     <td>{{file_name}}</td>
                     <td>{{file_type}}</td>
                     <td>{{file_ctime}}</td>
-                    <td>조회수 파이썬파일</td>
+                    <td>{{file_show}}</td>
                 </tr>
             </tbody>
         </table>
